@@ -1,5 +1,11 @@
 2015-10-30  Corinna Vinschen  <corinna@vinschen.de>
 
+	* nlsfuncs.cc (__get_lcid_from_locale): Handle LocaleNameToLCID
+	returning LOCALE_CUSTOM_UNSPECIFIED instead of failing in case of
+	an unsupported locale on Windows 10.
+
+2015-10-30  Corinna Vinschen  <corinna@vinschen.de>
+
 	* exceptions.cc (sigpacket::process): Avoid potentially double unlocking
 	the TLS mutex.
 
